Changed to using Path class instead of Paths class