@@ -2,7 +2,7 @@ package AoC2023;
 
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.IntStream;
@@ -18,7 +18,7 @@ public class FileInput {
     }
 
     private void read() {
-        try (Stream<String> stream = Files.lines(Paths.get(this.fileName))) {
+        try (Stream<String> stream = Files.lines(Path.of(this.fileName))) {
             stream.forEach(lines::add);
         } catch (IOException e) {
             throw new RuntimeException("Couldn't read the file.");
@@ -32,4 +32,15 @@ public class FileInput {
     public List<String> getLines() {
         return this.lines;
     }
+}
+
+class A {
+  void b() {
+    try {
+        Stream<Integer> s = Stream.of(1, 2, 3);
+        s.filter(i -> i != -1);
+    } catch (Exception e) {
+        throw new RuntimeException(e);
+    }
+  }
 }
